almost finished desktop and worked on mobile version

--- a/index.html
+++ b/index.html
@@ -23,24 +23,34 @@
 
         <!--Link list-->
         <nav>
-            <a href="#">About Us</a>            
-            <a href="#">What we do</a>            
-            <a href="#">Project</a>               
+            <ul>
+                <li>
+                    <a href="#">About Us</a>  
+                </li> 
+                <li>
+                    <a href="#">What we do</a>    
+                </li> 
+                <li>
+                   <a href="#">Project</a>  
+                </li>        
+            </ul>             
         </nav>
 
         <!--Button-->
-        <button class="button">Get In Touch</button>
+        <button>Get In Touch</button>
+        <!-- Mobile Menu -->
+        <img class="mobile-icon" src="./assets/Mobile Icons/Hamburger.png" alt="menu">
 
     </header>
 
     <!-- Section 1 -->
-    <section class="section1">
+    <section class="top-section-wrapper">
         <div class="section1-text">
             <h2 class="section1-h2">Pineapple Island: <br>
                 Where Every Home is a Slice of Paradise</h2>
-            <p class="textpadding">a community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home</p>
+            <p class="text-padding">a community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home</p>
         </div>
-        <div>
+        <div class="section1-image">
           <img class="desktop-image" src="./assets/Desktop Images/1101.png" alt="house">  
           <img class="mobile-image" src="./assets/Mobile Images/000.png" alt="house">
         </div>
@@ -48,35 +58,39 @@
     </section>
 
     <!-- Section 2 -->
-    <section class="section2">
-        <div>
-            <h2 class="textpadding">About Pineapple Island</h2>
-        </div>
-        <article class="section2-article">
+    <section class="top-section-wrapper">
+        <div class="section-content-wrapper">
             <div>
-                <img class="desktop-image" src="./assets/Desktop Images/1102.png" alt="suburb house">
-                <img class="mobile-image" src="./assets/Mobile Images/100.png" alt="">
+                <h2 class="text-padding">About Pineapple Island</h2>
             </div>
-            <div class="section2-p">
-                <p class="section2-p">Pineapple Island is the most sought-after  community in Ibadan that values and puts the needs of their clients first. It is a territory with loft complexes that creates a country life and homely feeling that is integrated with industrial development. A perfect, professional built  abode that gives you the true taste of beauty and happiness.</p>
-            </div>
-        </article>
+            <article class="section2-article">
+                <div class="section2-image">
+                    <img class="desktop-image" src="./assets/Desktop Images/1102.png" alt="suburb house">
+                    <img class="mobile-image" src="./assets/Mobile Images/100.png" alt="">
+                </div>
+                <div class="section2-p">
+                    <p class="text-padding">Pineapple Island is the most sought-after  community in Ibadan that values and puts the needs of their clients first. It is a territory with loft complexes that creates a country life and homely feeling that is integrated with industrial development. A perfect, professional built  abode that gives you the true taste of beauty and happiness.</p>
+                </div>
+            </article>
+        </div>
     </section>
 
     <!-- Section 3 -->
     <section class="section3">
-        <div>
-            <h2 class="section3-h2">Why Choose Pineapple Island</h2>
-        </div>
-        <article class="section3-article">
+        <div class="section-content-wrapper">
             <div>
-                <p class="section3-p">Pineapple Island is the most sought-after  community in Ibadan that values and puts the needs of their clients first. It is a territory with loft complexes that creates a country life and homely feeling that is integrated with industrial development. A perfect, professional built  abode that gives you the true taste of beauty and happiness.</p>
+                <h2 class="section3-h2">Why Choose Pineapple Island</h2>
             </div>
-            <div>
-                <img class="desktop-image" src="./assets/Desktop Images/1103.png" alt="dining room">
-                <img class="mobile-image" src="./assets/Mobile Images/200.png" alt="dining room">
-            </div>
-        </article>
+            <article class="section3-article">
+                <div>
+                    <p class="section3-p">Pineapple Island is the most sought-after  community in Ibadan that values and puts the needs of their clients first. It is a territory with loft complexes that creates a country life and homely feeling that is integrated with industrial development. A perfect, professional built  abode that gives you the true taste of beauty and happiness.</p>
+                </div>
+                <div class="section3-image">
+                    <img class="desktop-image" src="./assets/Desktop Images/1103.png" alt="dining room">
+                    <img class="mobile-image" src="./assets/Mobile Images/200.png" alt="dining room">
+                </div>
+            </article>
+        </div>    
     </section>
     
     <!-- Section 4 -->
@@ -139,25 +153,25 @@
                 <img src="./assets/Desktop Images/1108.png" alt="pink house stairs">
             </li>
             <li class="gallery-item">
-                <img src="./assets/Desktop Images/402.png" alt="">
+                <img src="./assets/Desktop Images/402.png" alt="porch">
             </li>
             <li class="gallery-item">
-                <img src="./assets/Desktop Images/1106.png" alt="">
+                <img src="./assets/Desktop Images/1106.png" alt="bathroom">
             </li>
             <li class="gallery-item">
-                <img src="./assets/Desktop Images/1109.png" alt="">
+                <img src="./assets/Desktop Images/1109.png" alt="inside stairs">
             </li>
             <li class="gallery-item">
-                <img src="./assets/Desktop Images/502.png" alt="">
+                <img src="./assets/Desktop Images/502.png" alt="light living room">
             </li>
             <li class="gallery-item">
-                <img src="./assets/Desktop Images/1107.png" alt="">
+                <img src="./assets/Desktop Images/1107.png" alt="chair in room">
             </li>
             <li class="gallery-item">
-                <img src="./assets/Desktop Images/1110.png" alt="">
+                <img src="./assets/Desktop Images/1110.png" alt="hallway">
             </li>
             <li class="gallery-item">
-                <img src="./assets/Desktop Images/602.png" alt="">
+                <img src="./assets/Desktop Images/602.png" alt="small table">
             </li>
         </ul>
 
@@ -166,7 +180,7 @@
     <!-- Section 6 -->
     <section class="section6">
         <div>
-            <img class="desktop-image" src="./assets/Desktop Images/1105.png" alt="plant on desk">
+            <img class="desktop-image" src="./assets/Desktop Images/1105.png" alt="plant on desk" loading="lazy">
         </div>
         
         <div>
@@ -189,13 +203,13 @@
 
     <!-- Section 7 -->
     <section class="section7">
-        <div class="section7-1">
+        <div class="section7-text">
             <h2>Become an Agent</h2>
             <p>A community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home.</p>
-            <button class="button">Join Now</button>
+            <button>Join Now</button>
         </div>
         <div>
-            <img class="desktop-image" src="./assets/Desktop Images/1112.png" alt="person">
+            <img class="desktop-image" src="./assets/Desktop Images/1112.png" alt="person" loading="lazy">
         </div>
     </section>
 
@@ -210,7 +224,7 @@
             <input type="text" id="" name="" placeholder="Phone No">
             <input type="text" id="" name="" placeholder="Email">
             <input class="form-message" type="text" id="message" name="" placeholder="Message">
-            <input class="button" type="submit" value="Send">
+            <input class="section8-button" type="submit" value="Send">
         </form>
 
     </section>
