finished desktop and added images to mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Pineapple Island</title>
 </head>
 <body>
 
@@ -49,6 +49,7 @@
             <h2 class="section1-h2">Pineapple Island: <br>
                 Where Every Home is a Slice of Paradise</h2>
             <p class="text-padding">a community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home</p>
+            <button class="mobile-button">Get In Touch</button>
         </div>
         <div class="section1-image">
           <img class="desktop-image" src="./assets/Desktop Images/1101.png" alt="house">  
@@ -95,7 +96,7 @@
     
     <!-- Section 4 -->
     <section class="section4">
-        <h2>What Pineapple Land Offers</h2>
+        <h2><span class="desktop-content">What </span>Pineapple Land Offers</h2>
         <article class="section4-article">
             <div>
                 <img class="desktop-image" src="./assets/Desktop Images/1104.png" alt="front of house">
@@ -141,7 +142,7 @@
 
     <!-- Section 5 -->
     <section class="section5">
-        <h2>Galleries</h2>
+        <h2> <span class="desktop-content">Galleries</span> <span class="mobile-content">Available Homes</span></h2>
         <p>a community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home.</p>
 
         <!-- GALLERY -->
@@ -186,15 +187,15 @@
         <div>
             <h2 class="section6-h2">Amazing Features</h2>
             <ul>
-                <li class="licolor">Tropical Paradise Setting</li>
+                <li class="li-color">Tropical Paradise Setting</li>
                 <li>Beachfront Living</li>
-                <li class="licolor">Gated and Secure</li>
+                <li class="li-color">Gated and Secure</li>
                 <li>Luxurious Amenities</li>
-                <li class="licolor">Family-Friendly Environment</li>
+                <li class="li-color">Family-Friendly Environment</li>
                 <li>Island Lifestyle Convenience</li>
-                <li class="licolor">Breathtaking Ocean Views</li>
+                <li class="li-color">Breathtaking Ocean Views</li>
                 <li>Vibrant Community Life</li>
-                <li class="licolor">Sustainable Living Options</li>
+                <li class="li-color">Sustainable Living Options</li>
                 <li>Proximity to Convenience</li>            
 
             </ul>
@@ -208,7 +209,7 @@
             <p>A community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home.</p>
             <button>Join Now</button>
         </div>
-        <div>
+        <div class="section7-image">
             <img class="desktop-image" src="./assets/Desktop Images/1112.png" alt="person" loading="lazy">
         </div>
     </section>
@@ -224,26 +225,28 @@
             <input type="text" id="" name="" placeholder="Phone No">
             <input type="text" id="" name="" placeholder="Email">
             <input class="form-message" type="text" id="message" name="" placeholder="Message">
-            <input class="section8-button" type="submit" value="Send">
+            <input class="form-button" type="submit" value="Send">
         </form>
 
     </section>
 
     <!-- Footer -->
     <footer>
-        <div>
-            <h3>Pineapple Island</h3>
-            <p>a community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home.</p>
-        </div>
-        <div>
-            <h4>Follow Up</h4>
-            <p>Keep up with our newsletter to get
-                updates about projects and offers</p>
-            <form action="">
-                <input type="text" id="" name="" placeholder="Email">
-                <input class="footer-button" type="submit" value="Subscribe">
-            </form>
+        <div class="footer-wrapper">
+            <div>
+                <h3>Pineapple Island</h3>
+                <p>a community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home.</p>
+            </div>
+            <div class="footer-part-2">
+                <h3>Follow Up</h3>
+                <p>Keep up with our newsletter to get
+                    updates about projects and offers</p>
+                <form action="">
+                    <input type="text" id="" name="" placeholder="Email">
+                    <input class="footer-button" type="submit" value="Subscribe">
+                </form>
 
+            </div>
         </div>
     </footer>
 
