finished majority of desktop and added mobile gallery

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--Button-->
         <button>Get In Touch</button>
         <!-- Mobile Menu -->
-        <img class="mobile-icon" src="./assets/Mobile Icons/Hamburger.png" alt="menu">
+        <img class="mobile-menu-icon" src="./assets/Mobile Icons/Hamburger.png" alt="menu">
 
     </header>
 
@@ -142,10 +142,12 @@
 
     <!-- Section 5 -->
     <section class="section5">
-        <h2> <span class="desktop-content">Galleries</span> <span class="mobile-content">Available Homes</span></h2>
+        <h2> <span class="desktop-content">Galleries</span> 
+            <span class="mobile-content">Available Homes</span>
+        </h2>
         <p>a community that gives you a taste of happiness, a place you'll love to live and an opportunity to build a home.</p>
 
-        <!-- GALLERY -->
+        <!-- DESKTOP GALLERY -->
         <ul class="gallery">
             <li class="gallery-item">
                 <img src="./assets/Desktop Images/1111.png" alt="living room">
@@ -175,6 +177,48 @@
                 <img src="./assets/Desktop Images/602.png" alt="small table">
             </li>
         </ul>
+            <!-- MOBILE GALLERY  -->
+        <section class="mobile-grid">
+            <div>
+                <img src="./assets/Mobile Images/400.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/401.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/500.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/501.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/600.png" alt="">
+            </div>
+            <div class="grid-tall-2">
+                <img src="./assets/Mobile Images/601.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/700.png" alt="">
+            </div>
+            <div class="grid-tall-2">
+                <img src="./assets/Mobile Images/800.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/801.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/900.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/1000.png" alt="">
+            </div>
+            <div>
+                <img src="./assets/Mobile Images/1001.png" alt="">
+            </div>
+            <div class="grid-wide-2">
+                <img src="./assets/Mobile Images/1100.png" alt="">
+            </div>
+        </section>
 
     </section>
 
@@ -217,7 +261,9 @@
     <!-- Section 8 -->
     <section class="section8">
         <h2>Stay In Touch</h2>
-        <p>Are you curious about Pineapple Island? Send a message</p>
+        <p> <span class="desktop-content">Are you curious about Pineapple Island? Send a message</span> 
+            <span class="mobile-content">If you are interested in finding out more about The Discovery Village, leave a message</span> 
+        </p>
 
         <!-- FORM -->
         <form class="section8-form">
