fixed mobile position properties

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section class="section4">
         <h2><span class="desktop-content">What </span>Pineapple Land Offers</h2>
         <article class="section4-article">
-            <div>
+            <div class="section4-one-picture">
                 <img class="desktop-image" src="./assets/Desktop Images/1104.png" alt="front of house">
                 <img class="mobile-image" src="./assets/Mobile Images/300.png" alt="front of house">
 
